# timed

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-linux-gcc.yml  cmake.yml
examples/: CMakeLists.txt  timerMain.cpp
include/: Benchmark.h  Timer.h
include/timed/: Benchmark.h  TimeUtils.h  Timer.h
include/timed/utils/: Statistics.h  TimeUtils.h
include/utils/: Statistics.h
src/: Benchmark.cpp  CMakeLists.txt  TimeUtils.cpp  Timer.cpp
src/utils/: CMakeLists.txt  Statistics.cpp  TimeUtils.cpp
test/: BenchmarkTest.cpp  CMakeLists.txt  TimeUtilsTest.cpp  TimerTest.cpp
test/utils/: CMakeLists.txt  StatisticsTest.cpp  TimeUtilsTest.cpp
